hphp/test/slow/record-type-hints/enum-alias-hint.php.expectf
string(4) "val2"
string(4) "val2"

Catchable fatal error: Record field 'A::x' declared as type Alias, int assigned in %s/enum-alias-hint.php on line 19

